--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -66,7 +66,7 @@ jobs:
         run: apt-cache policy qemu-user-static
       
       - name: Installare QEMU versione stabile
-        run: sudo apt-get install -y qemu-user-static=1:5.2+dfsg-9+deb11u2
+        run: sudo apt-get install -y qemu-user-static=1:6.2+dfsg-2ubuntu6
   
       - name: Bloccare aggiornamenti di libc6
         run: sudo apt-mark hold libc6
