ci: change custompios repo
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -64,6 +64,7 @@ jobs:
         uses: ./repository/.github/actions/build
         with:
           config: ${{ matrix.config }}
+          custompios-repository: "meteyou/CustomPiOS"
 
       - name: Rename image file
         id: move-image
