ci: change branch to fix-branch

--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -65,6 +65,7 @@ jobs:
         with:
           config: ${{ matrix.config }}
           custompios-repository: "meteyou/CustomPiOS"
+          custompios-ref: "fix/get-base-board-before-generate-config"
 
       - name: Rename image file
         id: move-image
