--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,11 @@ jobs:
       - name: "📥 Checkout"
         uses: actions/checkout@v4
 
+      - name: "🛠 Set RELEASE_TAG from VERSION file"
+        run: |
+          RELEASE_TAG=$(cat VERSION | tr -d '\n')
+          echo "RELEASE_TAG=${RELEASE_TAG}" >> $GITHUB_ENV
+
       - name: "🛠 Create directories"
         run: |
           mkdir -p build
@@ -104,12 +109,61 @@ jobs:
 
       - name: "📋 Copy generic and type scripts"
         run: |
-          cp -r scripts/generic/* scripts/
-          cp -r scripts/${{ matrix.type }}/* scripts/
+          cp -r modules/generic/* scripts/
+          cp -r modules/${{ matrix.type }}/* scripts/
+
+      - name: "Show scripts"
+        run: |
+          cd scripts
+          ls -la
 
       - name: "🏗 Run CustoPiZer"
         uses: OctoPrint/CustoPiZer@main
         with:
           workspace: "${{ github.workspace }}/build"
-          scripts:  "${{ github.workspace }}/scripts"
+          scripts:  "${{ github.workspace }}/modules"
           environment: '{ "RELEASE_TAG": "${{ env.RELEASE_TAG }}" }'
+
+      - name: "✏ Rename image"
+        shell: bash
+        run: |
+          RELEASE_TAG="${{ env.RELEASE_TAG }}"
+
+          IMAGE="MainsailOS-${{ matrix.name }}-${RELEASE_TAG}.img"
+          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+
+          cd build
+          mv output.img $IMAGE
+
+      - name: "🛠 Compressing Image"
+        shell: bash
+        run: |
+          CPU_COUNT="$(nproc)"
+          echo -e "\e[32mUsing ${CPU_COUNT} Cores for compression...\e[0m"
+          xz -efkvz9T"${CPU_COUNT}" ${{ steps.move-image.outputs.image }}.img || true
+
+      - name: "🔐 Create hash"
+        shell: bash
+        run: |
+          cd build
+          sha256sum ${{ env.IMAGE }}.img > ${{ env.IMAGE }}.img.sha256
+          sha256sum ${{ env.IMAGE }}.img.xz > ${{ env.IMAGE }}.img.xz.sha256
+
+      - name: "📋 Upload Compressed Image"
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.IMAGE }}.img.xz
+          path: ${{ env.IMAGE }}.img.xz
+
+      - name: "📋 Upload Compressed Image Checksum"
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.IMAGE }}.img.xz.sha256
+          path: ${{ env.IMAGE }}.img.xz.sha256
+
+      - name: "📋 Upload Image Checksum"
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.IMAGE }}.img.sha256
+          path: ${{ env.IMAGE }}.img.sha256
+
