fix: rename command in Unpack and rename image
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
           echo "Image file: ${DECOMPRESSED_FILE}"
 
           # rename the image file
-          mv "${DECOMPRESSED_FILE}" input.img
+          mv *.img input.img
 
       - name: "DEBUG"
         run: |
