--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,12 @@
-- name: raspberry_pi
+- name: raspberry_pi-arm64-bookworm
   type: raspberry
   img_download_url: "https://downloads.raspberrypi.org/raspios_lite_arm64_latest.torrent"
   img_hash_url: "https://downloads.raspberrypi.org/raspios_lite_arm64_latest.sha256"
-- name: armbian_board
+  env:
+    ARCH: arm64
+- name: armbian-orangepi4_lts-bookworm
   type: armbian
   img_download_url: "https://github.com/mainsail-crew/armbian-builds/releases/latest/download/armbian-orangepi4_lts_bookworm.img.xz"
   img_hash_url: "https://github.com/mainsail-crew/armbian-builds/releases/latest/download/armbian-orangepi4_lts_bookworm.img.xz.sha256"
+  env:
+    ARCH: arm64
