--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,7 @@
   img_hash_url: "https://downloads.raspberrypi.org/raspios_lite_arm64_latest.sha256"
   env:
     ARCH: arm64
+    IMAGE_ENLARGEROOT: 500
 - name: armbian-orangepi4_lts-bookworm
   type: armbian
   img_download_url: "https://github.com/mainsail-crew/armbian-builds/releases/latest/download/armbian-orangepi4_lts_bookworm.img.xz"
