--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,30 +157,30 @@ jobs:
         run: |
           CPU_COUNT="$(nproc)"
           echo -e "\e[32mUsing ${CPU_COUNT} Cores for compression...\e[0m"
-          xz -efkvz9T"${CPU_COUNT}" ${{ steps.move-image.outputs.image }}.img || true
+          xz -efkvz9T"${CPU_COUNT}" ${{ env.IMAGE }} || true
 
       - name: "🔐 Create hash"
         shell: bash
         run: |
           cd build
-          sha256sum ${{ env.IMAGE }}.img > ${{ env.IMAGE }}.img.sha256
-          sha256sum ${{ env.IMAGE }}.img.xz > ${{ env.IMAGE }}.img.xz.sha256
+          sha256sum ${{ env.IMAGE }}.img > ${{ env.IMAGE }}.sha256
+          sha256sum ${{ env.IMAGE }}.img.xz > ${{ env.IMAGE }}.xz.sha256
 
       - name: "📋 Upload Compressed Image"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.IMAGE }}.img.xz
-          path: ${{ env.IMAGE }}.img.xz
+          name: ${{ env.IMAGE }}.xz
+          path: ${{ env.IMAGE }}.xz
 
       - name: "📋 Upload Compressed Image Checksum"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.IMAGE }}.img.xz.sha256
-          path: ${{ env.IMAGE }}.img.xz.sha256
+          name: ${{ env.IMAGE }}.xz.sha256
+          path: ${{ env.IMAGE }}.xz.sha256
 
       - name: "📋 Upload Image Checksum"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.IMAGE }}.img.sha256
-          path: ${{ env.IMAGE }}.img.sha256
+          name: ${{ env.IMAGE }}.sha256
+          path: ${{ env.IMAGE }}.sha256
 
