refactor: remove wront value in enviroments
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -139,7 +139,7 @@ jobs:
           workspace: "${{ github.workspace }}/build"
           scripts:  "${{ github.workspace }}/modules"
           config: "${{ github.workspace }}/config.local"
-          environment: '{ "RELEASE_TAG": "${{ env.RELEASE_TAG }}", "dns": "8.8.8.8" }'
+          environment: '{ "RELEASE_TAG": "${{ env.RELEASE_TAG }}"}'
 
       - name: "✏ Rename image"
         shell: bash
