fix: add debug output to rename image
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,7 +150,9 @@ jobs:
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
 
           cd build
-          mv output.img $IMAGE
+          ls -la
+          mv output.img "${IMAGE}"
+          ls -la
 
       - name: "🛠 Compressing Image"
         shell: bash
