--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,7 @@ jobs:
         run: |
           cp -r modules/generic/* scripts/
           cp -r modules/${{ matrix.type }}/* scripts/
+          rm scripts/*.disabled
 
       - name: "📇 Generate config.local"
         run: |
