ci: fix issue, when no disabled module exists
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,9 @@ jobs:
         run: |
           cp -r modules/generic/* scripts/
           cp -r modules/${{ matrix.type }}/* scripts/
-          rm scripts/*.disabled
+          for file in scripts/*.disabled; do
+            rm "$file"
+          done
 
       - name: "📇 Generate config.local"
         run: |
