ci: fix issue, when no disabled module exists
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,9 @@ jobs:
           cp -r modules/generic/* scripts/
           cp -r modules/${{ matrix.type }}/* scripts/
           for file in scripts/*.disabled; do
-            rm "$file"
+            if [ -e "$file" ]; then
+              rm "$file"
+            fi
           done
 
       - name: "📇 Generate config.local"
