feat: add orangepi zero2
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/config.yml
+++ b/config.yml
@@ -27,3 +27,13 @@
     DISTRO: armbian
     IMAGE_ENLARGEROOT: 5000
   special_modules: []
+
+- name: armbian-orangepi_zero2-bookworm
+  type: armbian
+  img_download_url: "https://github.com/mainsail-crew/armbian-builds/releases/latest/download/armbian-orangepi_zero2_bookworm.img.xz"
+  img_hash_url: "https://github.com/mainsail-crew/armbian-builds/releases/latest/download/armbian-orangepi_zero2_bookworm.img.xz.sha256"
+  env:
+    ARCH: arm64
+    DISTRO: armbian
+    IMAGE_ENLARGEROOT: 5000
+  special_modules: []
