--- a/cliff.toml
+++ b/cliff.toml
@@ -61,6 +61,7 @@ commit_parsers = [
     # Commits to skip
     { message = "^docs\\(changelog\\):", group = "Changelog", skip = true}, # Old redundant commits
     { message = "^chore: push version number to", group = "9$Other", skip = true}, # Old redundant commits
+    { message = "^chore: Bump version to", group = "9$Other", skip = true}, # Old redundant commits
     { message = "^chore\\(changelog\\): update changelog", group = "Changelog", skip = true}, # Old redundant commits
 
     # Commits to parse
@@ -73,6 +74,7 @@ commit_parsers = [
     { message = "^locale(\\(.*\\))?:", group = "<!-- 6 -->Localization"},
     { message = "^docs(\\(.*\\))?:", group = "<!-- 7 -->Documentation"},
     { message = "^test(\\(.*\\))?:", group = "<!-- 8 -->Other"},
+    { message = "^ci(\\(.*\\))?:", group = "<!-- 8 -->Other"},
     { message = "^chore(\\(.*\\))?:", group = "<!-- 8 -->Other"},
 
     { body = ".*security", group = "Security"},
