ci: update buildtrain from develop
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/buildtrain.yml
+++ b/.github/workflows/buildtrain.yml
@@ -1,4 +1,4 @@
-name: "Release"
+name: "BuildTrain and Release"
 
 on:
   push:
@@ -119,6 +119,7 @@ jobs:
     # workaround, because prepare-release is not always executed
     if: |
       ${{
+          always() &&
           needs.generate-matrix.result == 'success' && (
               (github.event.inputs.release != 'true' && needs.prepare-release.result == 'skipped') ||
               (github.event.inputs.release == 'true' && needs.prepare-release.result == 'success')
