ci: fix upload rpi-imager.json
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/buildtrain.yml
+++ b/.github/workflows/buildtrain.yml
@@ -404,6 +404,7 @@ jobs:
       - name: "📋 Upload to Release"
         env:
           GH_TOKEN: ${{ github.token }}
+          GH_REPO: ${{ github.repository }}
         run: |
           gh release upload "${{ github.event.inputs.version }}" "rpi-imager.json" --clobber
 
