--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,14 @@
     ARCH: armhf
     IMAGE_ENLARGEROOT: 5000
   special_modules: []
+  rpi_json:
+    name: "MainsailOS $VERSION$ - Raspberry Pi (32-bit)"
+    description: "A port of Raspberry Pi OS with preinstalled Klipper/Moonraker/Mainsail for 3D printers"
+    icon: "https://os.mainsail.xyz/rpi-imager.png"
+    init_format: "systemd"
+    devices:
+      - "pi1-32bit"
+      - "pi2-32bit"
 
 - name: raspberry_pi-arm64-bookworm
   type: raspberry
@@ -15,6 +23,15 @@
     ARCH: arm64
     IMAGE_ENLARGEROOT: 5000
   special_modules: []
+  rpi_json:
+    name: "MainsailOS $VERSION$ - Raspberry Pi (64-bit)"
+    description: "A port of Raspberry Pi OS with preinstalled Klipper/Moonraker/Mainsail for 3D printers"
+    icon: "https://os.mainsail.xyz/rpi-imager.png"
+    init_format: "systemd"
+    devices:
+      - "pi3-64bit"
+      - "pi4-64bit"
+      - "pi5-64bit",
 
 - name: armbian-orangepi4_lts-bookworm
   type: armbian
@@ -26,6 +43,12 @@
     IMAGE_ENLARGEROOT: 5000
   special_modules:
     - 20-opi-4lts-spi
+  rpi_json:
+    name: "MainsailOS $VERSION$ - Orange Pi 4 LTS (64-bit)"
+    description: "A port of Armbian with preinstalled Klipper/Moonraker/Mainsail for 3D printers"
+    icon: "https://os.mainsail.xyz/rpi-imager.png"
+    devices:
+      - "opi4-64bit"
 
 - name: armbian-orangepi3_lts-bookworm
   type: armbian
@@ -37,6 +60,12 @@
     IMAGE_ENLARGEROOT: 5000
   special_modules:
     - 20-opi-3lts-spi
+  rpi_json:
+    name: "MainsailOS $VERSION$ - Orange Pi 4 LTS (64-bit)"
+    description: "A port of Armbian with preinstalled Klipper/Moonraker/Mainsail for 3D printers"
+    icon: "https://os.mainsail.xyz/rpi-imager.png"
+    devices:
+      - "opi3-64bit"
 
 - name: armbian-orangepi_zero2-bookworm
   type: armbian
@@ -48,3 +77,9 @@
     IMAGE_ENLARGEROOT: 5000
   special_modules:
     - 20-opi-zero2
+  rpi_json:
+    name: "MainsailOS $VERSION$ - Orange Pi Zero2 (64-bit)"
+    description: "A port of Armbian with preinstalled Klipper/Moonraker/Mainsail for 3D printers"
+    icon: "https://os.mainsail.xyz/rpi-imager.png"
+    devices:
+      - "opizero2-64bit"
