ci: fix config.yml
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/config.yml
+++ b/config.yml
@@ -31,7 +31,7 @@
     devices:
       - "pi3-64bit"
       - "pi4-64bit"
-      - "pi5-64bit",
+      - "pi5-64bit"
 
 - name: armbian-orangepi4_lts-bookworm
   type: armbian
